--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="row justify-content-around gy-4">
-          <div class="col-lg-6 img-bg" style="background-image: url(img/Reparar-aire-acondicionado.jpg.webp);" data-aos="zoom-in"
+          <div class="col-lg-6 img-bg" style="background-image: url(img/3a58326e-4ade-4e5a-8879-75c6e59af704.JPG);" data-aos="zoom-in"
             data-aos-delay="100"></div>
 
           <div class="col-lg-5 d-flex flex-column justify-content-center">
@@ -118,7 +118,7 @@
               <i class="bi bi-patch-check flex-shrink-0"></i>
               <div>
                 <h4><a class="stretched-link">Misión</a></h4>
-                <p class="texto-justificado">Una empresa de alto nivel profesional técnico, abocada a cumplir las necedidades y urgencias de sus clientes y satisfacertodos sus requerimientos, para lograr el máximo rendimiento, reconocimiento y recomendaciones en empresas y negocios.</p>
+                <p class="texto-justificado">Una empresa de alto nivel profesional técnico, abocada a cumplir las necesidades y urgencias de sus clientes y satisfacer todos sus requerimientos, para lograr el máximo rendimiento, reconocimiento y recomendaciones en empresas y negocios.</p>
               </div>
             </div>
 
@@ -126,13 +126,13 @@
               <i class="bi bi-patch-check flex-shrink-0"></i>
               <div>
                 <h4><a class="stretched-link">Visión</a></h4>
-                <p class="texto-justificado">Ser una empresa líder en el mercado de servicio y construcción de naves industriales y refrigeradas , siendo competitivos y brindando siempre la mejor calidad a nuestros clientes; que al pensar en las soluciones piensen 
+                <p class="texto-justificado">Ser una empresa líder en el mercado de servicio y construcción de naves industriales y refrigeradas, siendo competitivos y brindando siempre la mejor calidad a nuestros clientes; que al pensar en las soluciones piensen 
                   en nosotros, cuidando y capacitando siempre a nuestro personal para brindar siempre la mejor atención.
                 </p>
               <br>
               <p class="texto-justificado">
-                Convertirnos en una empresa líder y competitiva  que satisfaga las necesidades del consumidor asi como mejorar nuestros y servicios a través de los avances tecnológicos, implementando la mejora continua como medio hacia la experiencia y que esta forme parte de la cultura
-                de nuestro personal.
+                Convertirnos en una empresa líder y competitiva que satisfaga las necesidades del consumidor así como mejorar nuestros y servicios a través de los avances tecnológicos, implementando la mejora continua como medio hacia la experiencia y que esta forme parte de la cultura
+                de nuestro personal.                
               </p>
               </div>
             </div>
@@ -181,7 +181,7 @@
               <div class="row g-5 align-items-end">
                       <div class="col-lg-6 col-md-7 wow fadeInUp" data-wow-delay="0.3s">        
                           <h1 class="mb-4">Mejora Continua</h1>
-                          <p class="mb-4 texto-justificado">Compromiso firme con la renovacion de soluciones sostenibles y el respeto al medio ambiente en todas nuestras actividades y servicios.</p>
+                          <p class="mb-4 texto-justificado">Compromiso firme con la renovación de soluciones sostenibles y el respeto al medio ambiente en todas nuestras actividades y servicios.</p>
                       </div>
                       <div class="col-lg-6 col-md-7 wow fadeInUp" data-wow-delay="0.5s">
                               <h1 class="mb-4">Innovación</h1>
@@ -257,8 +257,8 @@
               <li>Martes</li>
               <li>Miercoles</li>
               <li>Jueves</li>
-              <li>viernes</li>
-              <li>Sabado</li>
+              <li>Viernes</li>
+              <li>Sábado</li>
             </ul>
           </div>
 
