--- a/mantenimientos.html
+++ b/mantenimientos.html
@@ -72,6 +72,69 @@
       </div>
     </div>
 
+    <section id="about" class="about">
+      <div class="container" data-aos="fade-up">
+
+        <div class="row position-relative">
+
+          <div class="col-lg-7 about-img" style="background-image: url(img/64df42fc-7fea-4c38-a3c6-61e87476da5a.JPG);"></div>
+
+          <div class="col-lg-7">
+            <h2></h2>
+            <div class="our-story">
+              <h3>Alcance</h3>
+              <p class="texto-justificado">Contamos con ingenieros con conocimiento de nomrmatividades TIF, HACCP, NOM, NAFA (Asociación Nacional de filtración de Aire-USA); y personal calificado
+                con más de 25 años de experencia en el medio.</p>
+              <p class="texto-justificado">Construcción , Servicio y mantenimiento industrial a naves secas de congelación y conservación, servicios de ventilación y extración y aire acondicionado de hogar e industrial con personal calificacdo y certificado.</p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+      <br>
+      <br>
+    </section>
+    <br>
+    <section id="about" class="about">
+      <div class="container" data-aos="fade-up">
+
+        <div class="row justify-content-around gy-4">
+          <div class="col-lg-6 img-bg" style="background-image: url(img/3a58326e-4ade-4e5a-8879-75c6e59af704.JPG);" data-aos="zoom-in"
+            data-aos-delay="100"></div>
+
+          <div class="col-lg-5 d-flex flex-column justify-content-center ">
+            <h3>Título</h3>
+            <p class="texto-justificado">Contenido </p>
+
+            <div class=" d-flex position-relative" data-aos="fade-up" data-aos-delay="100">
+              <i class="bi bi-patch-check flex-shrink-0"></i>
+              <div>
+                <h4><a class="stretched-link">Título</a></h4>
+                <p class="texto-justificado">Contenido.</p>
+              </div>
+            </div>
+
+            <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="200">
+              <i class="bi bi-patch-check flex-shrink-0"></i>
+              <div>
+                <h4><a class="stretched-link">Título</a></h4>
+                <p class="texto-justificado">Contenido
+                </p>
+              <br>
+              <p class="texto-justificado">
+                Contenido
+              </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+    </section>
+    
+
+
+
+
     <section id="services" class="services section-bg">
       <div class="container" data-aos="fade-up">
 
@@ -84,6 +147,8 @@
               </div>
               <h3 class="texto-justificado">Mantenimientos a equipos de refrigeración industriales y de carrocerías.</h3>
               <p class="texto-justificado">Es esencial para garantizar un rendimiento óptimo y prolongar la vida útil de estos sistemas. Este tipo de mantenimiento se centra en dos áreas principales: refrigeración industrial y carrocerías de vehículos.</p>
+              <br>
+              <p class="texto-justificado">Nuestro enfoque de mantenimiento preventivo ayuda a evitar averías costosas y tiempos de inactividad no planificados, prolongando la vida útil de sus equipos y maximizando su eficiencia energética. Realizamos una variedad de tareas de mantenimiento, incluyendo limpieza de componentes, lubricación de partes móviles, revisión de sistemas eléctricos y electrónicos, y verificación de niveles de refrigerante, entre otros.</p>
             </div>
           </div>
 
@@ -93,7 +158,11 @@
                 <i class="fa-solid fa-tachograph-digital"></i>
               </div>
               <h3 class="texto-justificado">Mantenimiento de Racks de compresores (Control, Programación y Automatización)</h3>
-              <p class="texto-justificado">Se ce ntra en garantizar el funcionamiento eficiente de kis sistemas de compresión, con un enfoque específico en el control, programación y automatización de estos equipops para un mejor rendimiento.</p>
+              <p class="texto-justificado">Se centra en garantizar el funcionamiento eficiente de kis sistemas de compresión, con un enfoque específico en el control, programación y automatización de estos equipops para un mejor rendimiento.</p>
+              <br>
+              <p class="texto-justificado">Nuestros servicios de mantenimiento incluyen inspecciones regulares, ajustes precisos y actualizaciones de software para garantizar que los racks de compresores operen de manera eficiente y segura</p>
+              <br>
+              <p class="texto-justificado">Realizamos diagnósticos avanzados para identificar y corregir cualquier problema potencial antes de que cause interrupciones en la operación.</p>
             </div>
           </div>
 
@@ -104,6 +173,10 @@
               </div>
               <h3 class="texto-justificado">Búsqueda de fugas por medio de luz UV y auditivos.</h3>
               <p class="texto-justificado">Una técnica utilizada para detectar y localizar escapes no deseados de fluidos, como refrigerantes o líquidos, en sistemas industriales o vehículos.</p>
+              <br>
+              <p class="texto-justificado">La luz ultravioleta (UV) nos permite detectar fugas de forma rápida y precisa al resaltar cualquier escape de fluido refrigerante que emita luz bajo condiciones de baja iluminación.</p>
+              <br>
+              <p class="texto-justificado">Combinado con dispositivos auditivos sensibles, podemos localizar fugas incluso en áreas de difícil acceso o en sistemas complejos.</p>
             </div>
           </div>
 
@@ -113,7 +186,9 @@
                 <i class="fa-solid fa-temperature-arrow-down"></i>
               </div>
               <h3 class="texto-justificado">Mantenimiento y limpieza a pisos de cámaras de congelación y refrigeración con productos químicos aprobados por la FDA.</h3>
-              <p class="texto-justificado">El mantenimiento y limpieza de pisos en cámaras de congelación y refrigeración es esencial para garantizar condiciones sanitarias óptimas y un entorno de trabajo seguro. Cuando se utilizan productos químicos en este contexto, es crucial que estén aprobados por la Administración de Alimentos y Medicamentos (FDA) para garantizar la seguridad de los productos almacenados..</p>
+              <p class="texto-justificado">El mantenimiento y limpieza de pisos en cámaras de congelación y refrigeración es esencial para garantizar condiciones sanitarias óptimas y un entorno de trabajo seguro. Cuando se utilizan productos químicos en este contexto, es crucial que estén aprobados por la Administración de Alimentos y Medicamentos (FDA) para garantizar la seguridad de los productos almacenados.</p>
+              <br>
+              <p class="texto-justificado">Al utilizar productos químicos aprobados por la FDA, garantizamos la conformidad con las regulaciones y normativas de seguridad alimentaria, lo que es especialmente crucial en entornos de almacenamiento y procesamiento de alimentos.</p>
             </div>
           </div>
 
@@ -352,7 +427,7 @@
               <li>Martes</li>
               <li>Miercoles</li>
               <li>Jueves</li>
-              <li>viernes</li>
+              <li>Viernes</li>
               <li>Sabado</li>
             </ul>
           </div>
