--- a/mantenimientos.html
+++ b/mantenimientos.html
@@ -182,30 +182,26 @@
               </div>
               <h3 class="texto-justificado">Limpieza y Mantenimiento.</h3>
               <p class="texto-justificado">Limpieza de Filtros.</p>
-              <br>
               <ul>
                 <li class="texto-justificado">Los filtros de aire se limpian o reemplazan para asegurar un flujo de aire óptimo y mantener la calidad del aire interior.</li>
               </ul>
               <p class="texto-justificado">Limpieza de bobinas.</p>
-              <br>
               <ul>
                 <li class="texto-justificado">Las bobinas del evaporador y del condensador se limpian para eliminar la acumulación de suciedad y mejorar la transferencia de calor.</li>
               </ul>
               <br>
-              <p class="texto-justificado">Revisión de Drenajes:</p>
+              <!-- <p class="texto-justificado">Revisión de Drenajes:</p>
               <br>
               <ul>
                 <li class="texto-justificado">Se inspeccionan y limpian los desagües para prevenir obstrucciones que puedan causar fugas de agua.</li>
               </ul>
-              <br>
+              <br> -->
               <p class="texto-justificado">Verificación de Niveles de Refrigerante:</p>
-              <br>
               <ul>
                 <li class="texto-justificado">Se verifica y, si es necesario, se recarga el refrigerante para mantener los niveles adecuados y el rendimiento óptimo del sistema.</li>
               </ul>
               <br>
               <p class="texto-justificado">Ajuste y Lubricación de Componentes:</p>
-              <br>
               <ul>
                 <li class="texto-justificado">Se ajustan y lubrican los componentes móviles para reducir el desgaste y mejorar la eficiencia. </li>
               </ul>
