--- a/mantenimientos.html
+++ b/mantenimientos.html
@@ -190,12 +190,34 @@
                 <li class="texto-justificado">Las bobinas del evaporador y del condensador se limpian para eliminar la acumulación de suciedad y mejorar la transferencia de calor.</li>
               </ul>
               <br>
-              <!-- <p class="texto-justificado">Revisión de Drenajes:</p>
-              <br>
+              <p class="texto-justificado">Verificación de Niveles de Refrigerante:</p>
               <ul>
-                <li class="texto-justificado">Se inspeccionan y limpian los desagües para prevenir obstrucciones que puedan causar fugas de agua.</li>
+                <li class="texto-justificado">Se verifica y, si es necesario, se recarga el refrigerante para mantener los niveles adecuados y el rendimiento óptimo del sistema.</li>
               </ul>
-              <br> -->
+              <br>
+              <p class="texto-justificado">Ajuste y Lubricación de Componentes:</p>
+              <ul>
+                <li class="texto-justificado">Se ajustan y lubrican los componentes móviles para reducir el desgaste y mejorar la eficiencia. </li>
+              </ul>
+            
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
+            <div class="service-item position-relative">
+              <div class="icon">
+                <i class="fas fa-users-cog"></i>
+              </div>
+              <h3 class="texto-justificado">Reparaciones y Reemplazos.</h3>
+              <p class="texto-justificado">Limpieza de Filtros.</p>
+              <ul>
+                <li class="texto-justificado">Los filtros de aire se limpian o reemplazan para asegurar un flujo de aire óptimo y mantener la calidad del aire interior.</li>
+              </ul>
+              <p class="texto-justificado">Limpieza de bobinas.</p>
+              <ul>
+                <li class="texto-justificado">Las bobinas del evaporador y del condensador se limpian para eliminar la acumulación de suciedad y mejorar la transferencia de calor.</li>
+              </ul>
+              <br>
               <p class="texto-justificado">Verificación de Niveles de Refrigerante:</p>
               <ul>
                 <li class="texto-justificado">Se verifica y, si es necesario, se recarga el refrigerante para mantener los niveles adecuados y el rendimiento óptimo del sistema.</li>
