--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
               </div>
 
               <div class="post-content d-flex flex-column">
-                <h3 class="post-title texto-justificado"><a href="disenoyconsultoria.html">Suministro e Instalación de extractores</a></h3>
+                <h3 class="post-title texto-justificado">Suministro e Instalación de extractores</h3>
               </div>
 
             </div>
