--- a/mantenimientos.html
+++ b/mantenimientos.html
@@ -178,7 +178,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="fas fa-users-cog"></i>
+                <i class="fas fa-trash"></i>
               </div>
               <h3 class="texto-justificado">Limpieza y Mantenimiento.</h3>
               <p class="texto-justificado">Limpieza de Filtros.</p>
