--- a/politica-privacidad.html
+++ b/politica-privacidad.html
@@ -92,17 +92,16 @@
               </p>
 
               <p class="texto-justificado">
-                Así mismo, le informamos que sus datos personales pueden ser transferidos y tratados dentro y fuera del país, por distintas empresas a esta empresa. En este sentido, su información puede ser
-                compartida a disitinas empresas con el fin de hacer promoción de Marketing. Para que sus datos sean transferidos.
+                Así mismo, le informamos que sus datos personales pueden ser transferidos y tratados dentro y fuera del país, por distintas empresas a esta empresa. En este sentido, su información puede ser compartida a distintas empresas con el fin de hacer promoción de Marketing. Para que sus datos sean transferidos.
 
               <p class="texto-justificado">
                 Si usted desea dejar de recibir mensajes promocionales de nuestra parte puede solicitarlo a través del teléfono: <strong> 55-7929-0992</strong> y al teléfono <strong>contacto@siarsa.com.mx</strong>
               </p>
 
               <p class="texto-justificado">
-                En cumplimiento de la LOPD, le informamos que sus datos podrían pasar a formar parte de SIARSA. Usted tiene derecho de acceso, rectificación, oposición y canclación que puede ejercer
-            mediante escrito a la dirección anteriormente indicada. Por la presente autoriza expresamente a la compañia a que le remita información sobre sus servicios a la direcciónde correo indicada en el formulario. 
-          La información ofrecida en esta página web es meramente orientativa y no es , en nigún caso, vinculante.
+                En cumplimiento de la LOPD, le informamos que sus datos podrían pasar a formar parte de SIARSA. Usted tiene derecho de acceso, rectificación, oposición y cancelación que puede ejercer
+            mediante escrito a la dirección anteriormente indicada. Por la presente autoriza expresamente a la compañía a que le remita información sobre sus servicios a la dirección de correo indicada en el formulario. 
+          La información ofrecida en esta página web es meramente orientativa y no es, en ningún caso, vinculante.
               </p>
 
             </div>
@@ -126,7 +125,7 @@
               <h3>SIARSA</h3>
               <p class="texto-justificado">
                 <strong>Telefono:</strong>&nbsp;<a href="tel:+525579290992" style="color: white">55-7929-0992</a><br>
-                <strong>Correo:</strong><a href="mailto:mario.r@siarsa.com.mx" style="color: white;">mario.r@siarsa.com.mx</a><br>
+                <strong>Correo:</strong>&nbsp;<a href="mailto:mario.r@siarsa.com.mx" style="color: white;">mario.r@siarsa.com.mx</a><br>
               </p>
               <div class="social-links d-flex mt-3">
                 <a href="https://api.whatsapp.com/send?phone=5579290992" target="_blank" class="d-flex align-items-center justify-content-center"><i class="bi bi-whatsapp"></i></a>
