--- a/venta.html
+++ b/venta.html
@@ -82,8 +82,8 @@
               <div class="icon">
                 <i class="fa-solid fa-fan"></i>
               </div>
-              <h3 class="texto-justificado">Suministro y Instalación de Extractores</h3>
-              <p class="texto-justificado">Mediante nuestros proovedores proporcionamos la mejor calidad de equipos de la mano con nuestro equipo brindamos la instalación para que tu proyecto sea el mejor.</p>
+              <h3 class="texto-justificado">Suministro e instalación de extractores</h3>
+              <p class="texto-justificado">Mediante nuestros proveedores proporcionamos la mejor calidad de equipos de la mano con nuestro equipo brindamos la instalación para que tu proyecto sea el mejor.</p>
             </div>
           </div>
 
@@ -92,7 +92,7 @@
               <div class="icon">
                 <i class="fa-solid fa-wind"></i>
               </div>
-              <h3 class="texto-justificado">Suministro e Instalación de HVAC</h3>
+              <h3 class="texto-justificado">Suministro e instalación de HVAC</h3>
               <p class="texto-justificado">Acorde tus necesidades te apoyaremos a ofrecerte el mejor sistema.</p>
               <br>
               <p class="texto-justificado">Nuestros técnicos expertos se encargan de la instalación con precisión y atención al detalle, garantizando un funcionamiento óptimo del sistema. Además, nos comprometemos a cumplir con los estándares de seguridad y calidad más rigurosos en cada proyecto.</p>
@@ -104,7 +104,7 @@
               <div class="icon">
                 <i class="fa-solid fa-person-digging"></i>
               </div>
-              <h3 class="texto-justificado">Aplicación de Piso Epóxico</h3>
+              <h3 class="texto-justificado">Aplicación de piso epóxico</h3>
               <p class="texto-justificado">Ideales para la resistencia al desgaste, durabilidad y capacidad para el soporte de cargas pesadas y el almacenamiento de estanterías</p>
             </div>
           </div>
@@ -114,10 +114,10 @@
               <div class="icon">
                 <i class="fa-solid fa-trowel-bricks"></i>
               </div>
-              <h3 class="texto-justificado">Reparación de Piso Epóxico</h3>
-              <p class="texto-justificado">Realizando estudios del suelo se determinara cual será el procedimiento para poder reparar.</p>
+              <h3 class="texto-justificado">Reparación de piso epóxico</h3>
+              <p class="texto-justificado">Realizando estudios del suelo se determinará cual será el procedimiento para poder reparar.</p>
               <br>
-              <p class="texto-justificado">Nuestro proceso de reparación de pisos epóxicos garantiza resultados de alta calidad, ofreciendo superficies resistentes, duraderas y visualmente atractivas.</p>
+              <p class="texto-justificado">Nuestro proceso de reparación de pisos epóxidos garantiza resultados de alta calidad, ofreciendo superficies resistentes, duraderas y visualmente atractivas.</p>
             </div>
           </div>
 
@@ -126,10 +126,10 @@
               <div class="icon">
                 <i class="fa-solid fa-helmet-safety"></i>
               </div>
-              <h3 class="texto-justificado">Reparación de Sistemas Hidráulicos de alta calidad.</h3>
+              <h3 class="texto-justificado">Reparación de sistemas hidráulicos de alta calidad.</h3>
               <p class="texto-justificado">Somos expertos para solucionar problemas y mantener la eficiencia de los sistemas hidráulicos, Esto implica diagnósticos precisos, utilizando tecnologías avanzadas y técnicas de análisis para identificar y abordar cualquier falla o deterioro en los componentes hidráulicos.</p>
               <br>
-              <p class="texto-justificado"> Los técnicos capacitados en este campo tienen un profundo conocimiento de los principios de la hidráulica y están equipados con herramientas especializadas para realizar reparaciones precisas y duraderas.</p>
+              <p class="texto-justificado">Los técnicos capacitados en este campo tienen un profundo conocimiento de los principios de la hidráulica y están equipados con herramientas especializadas para realizar reparaciones precisas y duraderas.</p>
             </div>
           </div>     
 
@@ -202,7 +202,7 @@
                           <div class="portfolio-content h-100">
                             <img src="img/encendidoaire.webp" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                              <h4>Venta de Sistemas Intelifentes de Aire Acondicionado</h4>
+                              <h4>Venta de sistemas Intelifentes de aire acondicionado</h4>
                             </div>
                           </div>
                         </div>
@@ -211,7 +211,7 @@
                           <div class="portfolio-content h-100">
                             <img src="img/venta-de-aires-acondicionado-en-santo-domingo-republica-dominicana.jpeg" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                              <h4>Encendido de Aire Acondicionado</h4>
+                              <h4>Encendido de aire acondicionado</h4>
                               <p class="texto-justificado"></p>
                             </div>
                           </div>
@@ -224,7 +224,7 @@
                           <div class="portfolio-content h-100">
                             <img src="img/sistemaespecializadorefri.jpeg" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                              <h4>Sistema de Refrigeracion Industrial</h4>
+                              <h4>Sistema de refrigeracion industrial y comercial</h4>
                              
                             </div>
                           </div>
@@ -237,7 +237,7 @@
                           <div class="portfolio-content h-100">
                             <img src="img/sistemarefrigeracionoespecial.jpeg" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                              <h4>Sistema Especializdos</h4>
+                              <h4>Sistema especializdos</h4>
                              
                             </div>
                           </div>
@@ -247,7 +247,7 @@
                           <div class="portfolio-content h-100">
                             <img src="img/electrico.jpg" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                              <h4>Sistema Especializdos</h4>
+                              <h4>Sistema especializdos</h4>
 
                             </div>
                           </div>
@@ -257,7 +257,7 @@
                           <div class="portfolio-content h-100">
                             <img src="img/instalacion-de-aire-acondicionado.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                              <h4>Sistema Especializdos</h4>
+                              <h4>Sistema especializdos</h4>
                             </div>
                           </div>
                         </div>
@@ -266,7 +266,7 @@
                           <div class="portfolio-content h-100">
                             <img src="img/instalaciontecnico.jpg" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                              <h4>Sistema Especializdos</h4>  
+                              <h4>Sistema especializdos</h4>  
                             </div>
                           </div>
                         </div> 
