--- a/disenoyconsultoria.html
+++ b/disenoyconsultoria.html
@@ -66,7 +66,7 @@
   <main id="main">
 
     
-    <div class="breadcrumbs d-flex align-items-center" style="background-image: url('img/planosacad.avif');">
+    <div class="breadcrumbs d-flex align-items-center" style="background-image: url('img/diseñohvac2.jpeg');">
       <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
         <h2>Diseño y Consultoría</h2>
       </div>
