--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
 
         <div class="row position-relative">
 
-          <div class="col-lg-7 about-img" style="background-image: url(img/instalacion-aire-acondicionado-que-se-necesita-scaled.jpeg);"></div>
+          <div class="col-lg-7 about-img" style="background-image: url(img/0c0bcc67-95a1-44e5-b613-cc5c40a99792.JPG);"></div>
 
           <div class="col-lg-7">
             <h2></h2>
