--- a/venta.html
+++ b/venta.html
@@ -255,7 +255,7 @@
 
                         <div class="col-lg-4 col-md-6 portfolio-item filter-sistespe">
                           <div class="portfolio-content h-100">
-                            <img src="img/instalacion-de-aire-acondicionado.png" class="img-fluid" alt="">
+                            <img src="img/cb4ca4ca-b6e1-4e7d-ad3c-be1e3a0a2cd5.JPG" class="img-fluid" alt="">
                             <div class="portfolio-info">
                               <h4>Sistema especializdos</h4>
                             </div>
@@ -264,7 +264,7 @@
 
                         <div class="col-lg-4 col-md-6 portfolio-item filter-sistespe">
                           <div class="portfolio-content h-100">
-                            <img src="img/instalaciontecnico.jpg" class="img-fluid" alt="">
+                            <img src="img/d759834a-3687-4455-9108-8e86aaa34111.JPG" class="img-fluid" alt="">
                             <div class="portfolio-info">
                               <h4>Sistema especializdos</h4>  
                             </div>
