--- a/mantenimientos.html
+++ b/mantenimientos.html
@@ -84,7 +84,7 @@
             <div class="our-story">
               <h3>Tipos de Mantenimiento.</h3>
               <h5>Mantenimiento Preventivo</h3>
-              <p class="texto-justificado">Incluye limpieza de componentes, lubricación de partes móviles, verificación de niveles de refrigerante y pruebas de funcionamiento para asegurar que sus equipos operen de manera eficiente y segura. demás, ofrecemos servicios de mantenimiento correctivo para abordar cualquier problema que pueda surgir, con rapidez y eficacia, restaurando el funcionamiento óptimo de sus sistemas.</p>
+              <p class="texto-justificado">Incluye limpieza de componentes, lubricación de partes móviles, verificación de niveles de refrigerante y pruebas de funcionamiento para asegurar que sus equipos operen de manera eficiente y segura.</p>
                 <br>
                 <h5>Mantenimiento Correctivo</h5>
               <p class="texto-justificado">Nuestro equipo de técnicos altamente capacitados cuenta con la experiencia y los recursos necesarios para diagnosticar y reparar una amplia gama de problemas HVAC, desde fallos mecánicos hasta problemas de control y funcionamiento</p>
