--- a/venta.html
+++ b/venta.html
@@ -146,7 +146,7 @@
                     <div class="justify-content-between gy-4">
                       <div class="col-lg-12 d-flex align-items-center" data-aos="fade-up">
                         <div class="content">
-                          <h3>¿Como funciona un HVAC?</h3>
+                          <h3>¿Cómo funciona un HVAC?</h3>
                           <p class="texto-justificado">Las funciones principales de un sistema HVAC están interrelacionadas, especialmente a la hora de proporcionar una calidad de aire y unas condiciones térmicas aceptables. El sistema de calefacción y aire acondicionado suele ser uno de los sistemas más complicados y extensos de los hogares y las empresas, pero cuando deja de funcionar se nota rápidamente.</p>
                           <br>
                           <h3>¿Cuál es la diferencia entre HVAC y aire acondicionado?</h3>
@@ -313,7 +313,7 @@
             <div class="footer-info">
               <h3>SIARSA</h3>
               <p class="texto-justificado">
-                <strong>Telefono:</strong>&nbsp;<a href="tel:+525579290992" style="color: white">55-7929-0992</a><br>
+                <strong>Teléfono:</strong>&nbsp;<a href="tel:+525579290992" style="color: white">55-7929-0992</a><br>
                 <strong>Correo:</strong><a href="mailto:mario.r@siarsa.com.mx" style="color: white;">mario.r@siarsa.com.mx</a><br>
               </p>
               <div class="social-links d-flex mt-3">
