--- a/politica-privacidad.html
+++ b/politica-privacidad.html
@@ -124,7 +124,7 @@
             <div class="footer-info">
               <h3>SIARSA</h3>
               <p class="texto-justificado">
-                <strong>Telefono:</strong>&nbsp;<a href="tel:+525579290992" style="color: white">55-7929-0992</a><br>
+                <strong>Teléfono:</strong>&nbsp;<a href="tel:+525579290992" style="color: white">55-7929-0992</a><br>
                 <strong>Correo:</strong>&nbsp;<a href="mailto:mario.r@siarsa.com.mx" style="color: white;">mario.r@siarsa.com.mx</a><br>
               </p>
               <div class="social-links d-flex mt-3">
