--- a/mantenimientos.html
+++ b/mantenimientos.html
@@ -383,7 +383,7 @@
                           <div class="portfolio-content h-100">
                             <img src="img/busquedafugaporuv.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                              <h4>Sistema de Refrigeracion Industrial</h4>                         
+                              <h4>Sistema de Refrigeración Industrial</h4>                         
                             </div>
                           </div>
                         </div>            
@@ -392,7 +392,7 @@
                           <div class="portfolio-content h-100">
                             <img src="img/9736ddcc-59b3-4a38-be2e-3561298a9605.JPG" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                              <h4>Sistema Especializdos</h4>
+                              <h4>Sistemas Especializdos</h4>
                              
                             </div>
                           </div>
