--- a/mantenimientos.html
+++ b/mantenimientos.html
@@ -83,10 +83,10 @@
             <h2></h2>
             <div class="our-story">
               <h3>Tipos de Mantenimiento.</h3>
-              <h5>Mantenimiento Preventivo</h3>
+              <h5>Preventivo</h3>
               <p class="texto-justificado">Incluye limpieza de componentes, lubricación de partes móviles, verificación de niveles de refrigerante y pruebas de funcionamiento para asegurar que sus equipos operen de manera eficiente y segura.</p>
                 <br>
-                <h5>Mantenimiento Correctivo</h5>
+                <h5>Correctivo</h5>
               <p class="texto-justificado">Nuestro equipo de técnicos altamente capacitados cuenta con la experiencia y los recursos necesarios para diagnosticar y reparar una amplia gama de problemas HVAC, desde fallos mecánicos hasta problemas de control y funcionamiento</p>
             </div>
           </div>
