--- a/politica-privacidad.html
+++ b/politica-privacidad.html
@@ -5,22 +5,22 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>SIARSA || Politicas de Privacidad</title>
+  <title>SIARSA</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <!-- Favicons -->
+  
   <link href="img/logo-siarsa.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-  <!-- Fuentes de Google -->
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Roboto:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
     rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
+
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
@@ -28,14 +28,14 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
+
   <link href="assets/css/main.css" rel="stylesheet">
 
 </head>
 
 <body>
 
-  <!-- ======= Cabecera ======= -->
+
   <header id="header" class="header d-flex align-items-center">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
@@ -66,15 +66,15 @@
 
   <main id="main">
 
-    <!-- ======= Breadcrumbs ======= -->
+
     <div class="breadcrumbs d-flex align-items-center" style="background-image: url('img/candadoteclado.jpeg');">
       <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
         <h2>Políticas de Privacidad</h2>
       </div>
-    </div><!-- End Breadcrumbs -->
-
-    <!-- ======= Sección de Detalles ======= -->
+    </div>
+    
+    
     <section id="project-details" class="project-details">
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="row justify-content-between gy-4 mt-4">
@@ -89,7 +89,7 @@
                 Para las finalidades antes mencionadas, requerimos los siguientes datos personales: <strong>Nombre, Teléfono, Correo Electrónico y Ocupación </strong>, Usted tiene derecho a acceder, rectificar, y cancelar sus datos personales, asi como al tratamiento 
                 de los mismos o revocar el consentimiento para tal fin nos haya otorgado, a través de los procedimientos que hemos implementado. Para conocer dichos procedimientos, los requisitos, los plazos, se puede poner en contacto con nuestro departamento de datos personales 
                 mediante el correo <strong>contacto@siarsa.com.mx</strong> que con gusto le atenderán.
-              </p>
+    s          </p>
 
               <p class="texto-justificado">
                 Así mismo, le informamos que sus datos personales pueden ser transferidos y tratados dentro y fuera del país, por distintas empresas a esta empresa. En este sentido, su información puede ser compartida a distintas empresas con el fin de hacer promoción de Marketing. Para que sus datos sean transferidos.
@@ -109,11 +109,11 @@
         </div>
 
       </div>
-    </section><!-- final de sección de detalles -->
+    </section>
 
-  </main><!-- Fin de main -->
+  </main>
 
-  <!-- ======= Pie de Página ======= -->
+
   <footer id="footer" class="footer">
 
     <div class="footer-content position-relative">
@@ -196,14 +196,14 @@
       </div>
 
   </footer>
-  <!-- Fin de Pie de Página -->
+ 
 
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
 
   <div id="preloader"></div>
 
-  <!-- Vendor JS Files -->
+  
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
@@ -212,7 +212,7 @@
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
-  <!-- Template Main JS File -->
+
   <script src="assets/js/main.js"></script>
 </body>
 
