--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  
+  <!-- Favicons -->
   <link href="img/logo-siarsa.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
- 
+  <!-- Fuentes de Google -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -190,7 +190,7 @@
               </div>
 
               <div class="post-content d-flex flex-column">
-                <h3 class="post-title texto-justificado">Mantenimiento a racks de compresores (control, programación y automatización)</h3>
+                <h3 class="post-title texto-justificado">Mantenimiento a racks de compresores (Control, programación y automatización)</h3>
               </div>
 
             </div>
@@ -246,7 +246,7 @@
               </div>
 
               <div class="post-content d-flex flex-column">
-                <h3 class="post-title texto-justificado">Suministro e instalación de extractores</h3>
+                <h3 class="post-title texto-justificado">Suministro e Instalación de extractores</h3>
               </div>
 
             </div>
@@ -261,10 +261,10 @@
               </div>
 
               <div class="post-content d-flex flex-column">
-                <h3 class="post-title texto-justificado">Suministro e instalación de HVLS</h3>
+                <h3 class="post-title texto-justificado">Suministro e Instalación de HVLS</h3>
               </div>
 
-            </divu>
+            </div>
           </div>
 
           <div class="col-xl-4 col-md-6">
@@ -275,7 +275,7 @@
               </div>
 
               <div class="post-content d-flex flex-column">
-                <h3 class="post-title texto-justificado">Aplicación de piso epóxico</h3>
+                <h3 class="post-title texto-justificado">Aplicación de Piso Epóxico</h3>
               </div>
             </div>
           </div>
@@ -288,7 +288,7 @@
               </div>
 
               <div class="post-content d-flex flex-column">
-                <h3 class="post-title texto-justificado">Reparación de sistemas hidráulicos a alta presión</h3>
+                <h3 class="post-title texto-justificado">Reparación de Sistemas hidráulicos a alta presión</h3>
               </div>
 
             </div>
