--- a/venta.html
+++ b/venta.html
@@ -377,7 +377,7 @@
       <div class="footer-legal text-center position-relative">
         <div class="container">
           <div class="copyright">
-            &copy; Copyright <strong><span>SIARSA</span></strong>. Todos los derechos son reservados.&nbps;&nbps;<script>document.write(new Date().getFullYear())</script>
+            &copy; Copyright <strong><span>SIARSA</span></strong>. Todos los derechos son reservados.<script>document.write(new Date().getFullYear())</script>
           </div>
           <div class="credits">
             Consulta Nuestro&nbsp;&nbsp;&nbsp;<a href="politica-privacidad.html">Aviso de Privacidad</a> 
